<resources>
    <string name="app_name">Corona Tracker</string>
    <string name="confirm">Confirm</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="death">Death</string>
    <string name="tests">Tests</string>
    <string name="developed_by_ishwar">Developed By Ishwar</string>
    <string name="country_name">Country Name</string>
    <string name="total_cases">Total Cases</string>
    <string name="search_country">Search Country</string>
    <string name="home">Home</string>
    <string name="vaccination">Vaccination</string>
    <string name="Vaccination">Vaccination</string>
    <string name="Details">Details</string>
    <string name="enter_pincode_of_your_area">Enter Pincode Of Your Area</string>
    <string name="search">Search</string>
    <string name="vaccination_center">Vaccination Center</string>
    <string name="location">Location</string>
    <string name="vaccination_time">Vaccination Time</string>
    <string name="age">Age</string>
    <string name="available">Available</string>

</resources>