<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/vaccination_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_hospital"
            android:drawableLeft="@drawable/ic_hospital"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:text="@string/vaccination_center"
            android:textColor="#384357"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vaccination_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:text="@string/location"
            android:textColor="#384357"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/vaccination_center"
            app:layout_constraintTop_toBottomOf="@id/vaccination_center" />

        <TextView
            android:id="@+id/vaccination_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_train_24"
            android:drawableLeft="@drawable/ic_baseline_train_24"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:text="@string/location"
            android:textColor="#384357"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/vaccination_location"
            app:layout_constraintTop_toBottomOf="@id/vaccination_location" />

        <TextView
            android:id="@+id/vaccination_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_time"
            android:drawableLeft="@drawable/ic_time"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:text="@string/vaccination_time"
            android:textColor="#384357"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/vaccination_city"
            app:layout_constraintTop_toBottomOf="@id/vaccination_city" />

        <TextView
            android:id="@+id/vaccination_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_design_services_24"
            android:drawableLeft="@drawable/ic_baseline_design_services_24"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:text="@string/vaccination_time"
            android:textColor="#384357"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/vaccination_center"
            app:layout_constraintTop_toBottomOf="@id/vaccination_time" />

        <TextView
            android:id="@+id/vaccination_charges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_money_24"
            android:drawableLeft="@drawable/ic_baseline_money_24"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:text="Vaccine Charges"
            android:textColor="#384357"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/vaccination_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vaccination_name"
            app:layout_constraintTop_toTopOf="@id/vaccination_name" />

        <TextView
            android:id="@+id/vaccination_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:text="@string/age"
            android:textColor="#384357"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/vaccination_name"
            app:layout_constraintTop_toBottomOf="@id/vaccination_name" />

        <TextView
            android:id="@+id/vaccination_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_store_24"
            android:drawableLeft="@drawable/ic_baseline_store_24"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:text="@string/available"
            android:textColor="#384357"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/vaccination_age"
            app:layout_constraintStart_toStartOf="@id/vaccination_charges"
            app:layout_constraintTop_toTopOf="@id/vaccination_age" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/vaccination_age"
            android:layout_marginTop="5dp"
            android:background="@color/color_primary"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>